# trip-planner-agents

./: .env.example  README.md  config.py  graph.py  main.py  prompts.py  pyproject.toml  state.py  validators.py
agents/: flight_finder.py  hotel_finder.py  state.py  supervisor.py
budget/: __init__.py  enforcer.py
flights/: __init__.py  agent.py  node.py
hotels/: __init__.py  agent.py  node.py
itinerary/: __init__.py  writer.py
middleware/: mcp_middleware.py  retry.py
supervisor/: __init__.py  trip_details_parser.py
